# daedalus

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
daedalus/: __init__.py  agent.py  cli.py  config.py  llm.py  prompts.py  sandbox.py  synthesis.py  toolbox.py
daedalus/primitives/: __init__.py  core.py
examples/: demo_offline.py  tasks.md
tests/: test_llm.py  test_sandbox.py  test_synthesis.py  test_toolbox.py
